Fix tools grid-template-columns on small devides

--- a/styles.css
+++ b/styles.css
@@ -331,3 +331,9 @@ footer {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+
+@media screen and (max-width: 450px) {
+  .tools-container ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
